# 2022-10-mih-demo

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.html  README.md  dependencies.repos  deps.repos  package.xml  rust-toolchain.toml
aw-viz/config/: example.json5
aw-viz/src/: config.rs  main.rs
camera-viz/: Cargo.toml
camera-viz/config/: example.json5
camera-viz/src/: color_sampling.rs  config.rs  fuse.rs  kiss3d_gui.rs  main.rs  message.rs  opencv_gui.rs  rect_rtree.rs  utils.rs
camera_viz/: Cargo.toml  package.xml
camera_viz/src/: color_sampling.rs  point_projection.rs  rect_rtree.rs
crates/aw_viz/: Cargo.toml
crates/aw_viz/config/: example.json5
crates/aw_viz/src/: main.rs
crates/camera_viz/: Cargo.toml
crates/camera_viz/config/: example.json5
crates/camera_viz/src/: config.rs  fuse.rs  kiss3d_gui.rs  main.rs  opencv_gui.rs  point_projection.rs  rect_rtree.rs  yaml_loader.rs
crates/det_conv_node/: Cargo.toml
crates/det_conv_node/src/: main.rs
crates/kneron-bbox-server/examples/: async_capture.rs
crates/kneron_bbox_server/: Cargo.toml
crates/kneron_bbox_server/src/: async_server.rs  server.rs
crates/kneron_bbox_server_node/: Cargo.toml
crates/kneron_bbox_server_node/src/: main.rs
crates/newslab_fuse_demo/src/: color_sampling.rs  kiss3d_gui.rs  message.rs  point_projection.rs
data/: kneron.extrinsics.json5  kneron.intrinsics.yaml  otobrite.extrinsics.3m.json5  otobrite.extrinsics.json5
data/kneron-extrinsics-params/solve_on_set-1,2,3,4,5,14,15,16,17,18/: kneron.extrinsics.json5
data/kneron-extrinsics-params/solve_on_set-14,15,16,17,18/: kneron.extrinsics.json5
data/kneron-extrinsics-params/solve_on_set-2,3,4,5,14,15,16,17,18/: kneron.extrinsics.json5
data/kneron-extrinsics-params/solve_on_set-6,7,8,9,10,11/: kneron.extrinsics.json5
data/otobrite-extrinsics-params/solve_on_all-sets/: otobrite.extrinsics.json5
data/otobrite-extrinsics-params/solve_on_set-1,18/: otobrite.extrinsics.json5
data/otobrite-extrinsics-params/solve_on_set-1,2,3,4/: otobrite.extrinsics.json5
demo-viz/: Cargo.toml
demo-viz/src/: kiss3d_gui.rs  main.rs  opencv_gui.rs
det-conv-node/: Cargo.toml
det-conv-node/src/: main.rs
doc/: ARCHITECTURE.dot  ARCHITECTURE.md  INSTALL.md  architecture.dot  legend.dot
kneron-bbox-server/: Cargo.toml
kneron-bbox-server-node/: CMakeLists.txt  Cargo.toml  package.xml
kneron-bbox-server-node/src/: main.rs
kneron-bbox-server/examples/: capture.rs
kneron-bbox-server/src/: async_server.rs  lib.rs  protocol.rs  server.rs
scripts/: start.sh
src/newslab_fuse_demo/: Cargo.toml
src/newslab_fuse_demo/kneron_bbox_server/src/: protocol.rs
src/newslab_fuse_demo/kneron_bbox_server_node/: Cargo.toml  package.xml
src/newslab_fuse_demo/newslab_fuse_demo/: Cargo.toml  package.xml
src/newslab_fuse_demo/newslab_fuse_demo/config/: example.json5
src/newslab_fuse_demo/newslab_fuse_demo/config/camera/: kneron.extrinsics.json5  otobrite.extrinsics.2-3-4m.json5  otobrite.extrinsics.2m.json5  otobrite.extrinsics.4m.json5
src/newslab_fuse_demo/newslab_fuse_demo/config/camera/kneron-extrinsics-params/solve_on_set-1,2,3,4,5/: kneron.extrinsics.json5
src/newslab_fuse_demo/newslab_fuse_demo/config/camera/kneron-extrinsics-params/solve_on_set-1,2,3,4,5,6,7,8,9,10,11/: kneron.extrinsics.json5
src/newslab_fuse_demo/newslab_fuse_demo/config/camera/kneron-extrinsics-params/solve_on_set-2,3,4,5/: kneron.extrinsics.json5
src/newslab_fuse_demo/newslab_fuse_demo/config/camera/otobrite-extrinsics-params/solve_on_set-1/: otobrite.extrinsics.json5
src/newslab_fuse_demo/newslab_fuse_demo/config/camera/otobrite-extrinsics-params/solve_on_set-1,2/: otobrite.extrinsics.json5
src/newslab_fuse_demo/newslab_fuse_demo/config/camera/otobrite-extrinsics-params/solve_on_set-10,11,12,13/: otobrite.extrinsics.json5
src/newslab_fuse_demo/newslab_fuse_demo/config/camera/otobrite-extrinsics-params/solve_on_set-15,16,17,18/: otobrite.extrinsics.json5
src/newslab_fuse_demo/newslab_fuse_demo/config/camera/otobrite-extrinsics-params/solve_on_set-18/: otobrite.extrinsics.json5
src/newslab_fuse_demo/newslab_fuse_demo/config/camera/otobrite-extrinsics-params/solve_on_set-2/: otobrite.extrinsics.json5
src/newslab_fuse_demo/newslab_fuse_demo/src/: config.rs  main.rs  opencv_gui.rs  rate_meter.rs
src/newslab_fuse_demo/otobrite_v4l2_node/: Cargo.toml  package.xml
src/newslab_fuse_demo/v4l2_node/: Cargo.toml  package.xml
src/newslab_fuse_demo/v4l2_node/config/: example.json5
src/newslab_fuse_demo/v4l2_node/src/: config.rs  main.rs
src/newslab_fuse_demo/vision_to_autoware_conv_node/: Cargo.toml  package.xml
src/newslab_fuse_demo/vision_to_autoware_conv_node/src/: main.rs
viz/: CMakeLists.txt  Cargo.toml
viz/src/: config.rs  kiss3d_gui.rs  main.rs  opencv_gui.rs
