<package format="3">
  <name>kneron_bbox_server_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jerry73204@gmail.com">Hsiang-Jui Lin</maintainer>
  <license>MIT</license>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
