[package]
name = "kneron-bbox-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.24"
log = "0.4.17"

[dev-dependencies]
clap = { version = "4.0.11", features = ["derive"] }
