[package]
name = "viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
clap = { version = "4.0.7", features = ["derive"] }
flume = "0.10.14"
futures = "0.3.24"
itertools = "0.10.5"
json5 = "0.4.1"
kiss3d = "0.35.0"
nalgebra = "0.31.1"
noisy_float = { version = "0.2.0", features = ["serde"] }
opencv = { version = "0.68.0", default-features = false, features = ["highgui", "imgproc"] }
r2r = "0.6.3"
serde = { version = "1.0.145", features = ["derive"] }
serde-loader = { version = "0.1.4", features = ["json5"] }
serde-semver = "0.2.1"
serde_yaml = "0.9.13"
