[package]
name = "newslab_fuse_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
clap = { version = "4.0.7", features = ["derive"] }
flume = "0.10.14"
futures = "0.3.24"
itertools = "0.10.5"
json5 = "0.4.1"
kiss3d = "0.35.0"
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
noisy_float = { version = "0.2.0", features = ["serde"] }
opencv = { version = "0.68.0", default-features = false, features = ["highgui", "imgproc", "calib3d"] }
r2r = "0.6.3"
serde = { version = "1.0.145", features = ["derive"] }
serde-loader = { version = "0.1.4", features = ["json5"] }
serde-semver = "0.2.1"
serde_yaml = "0.9.13"
num-derive = "0.3.3"
num-traits = "0.2.15"
slice-of-array = "0.3.2"
cv-convert = { version = "0.21.0", features = ["opencv_0-68", "nalgebra_0-30"] }
rstar = "0.9.3"
ownref = "0.3.1"
palette = "0.6.1"
once_cell = "1.15.0"
fast-yuv442-to-rgb24 = { git = "https://github.com/jerry73204/fast-yuv442-to-rgb24.git", rev = "95f69c0c2f0040f91e31be87f45ec903c121aee4" }
rayon = "1.5.3"
