[package]
name = "otobrite_v4l2_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.14", features = ["derive"] }
json5 = "0.4.1"
rscam = "0.5.5"
serde = { version = "1.0.145", features = ["derive"] }
r2r = "0.6.3"
