[package]
name = "vision_to_autoware_conv_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
clap = { version = "4.0.7", features = ["derive"] }
flume = "0.10.14"
futures = "0.3.24"
itertools = "0.10.5"
r2r = "0.6.3"
